<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/Copyright" />

    <RelativeLayout
        android:id="@+id/layoutSphere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/lblRadiusSphere"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:text="Radius" />

        <EditText
            android:id="@+id/txtRadiusSphere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblRadiusSphere"
            android:layout_alignBottom="@+id/lblRadiusSphere"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/lblRadiusSphere"
            android:hint="Radius of the Sphere"
            android:ems="10" >
        </EditText>

        <Button
            android:id="@+id/btnCalculateSphere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtRadiusSphere"
            android:layout_marginTop="50dp"
            android:onClick="calculate"
            android:text="@string/Calculate" />

        <TextView
            android:id="@+id/lblAreaSphere"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCalculateSphere"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@+id/txtRadiusSphere"
            android:text="Area" />

        <TextView
            android:id="@+id/lblVolumeSphere"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblAreaSphere"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@+id/txtRadiusSphere"
            android:text="Volume" />

        <Button
            android:id="@+id/btnInformationSphere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:text="@string/Information" />

        <TextView
            android:id="@+id/lblAreaAnsSphere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblAreaSphere"
            android:layout_alignBottom="@+id/lblAreaSphere"
            android:layout_alignLeft="@+id/txtRadiusSphere"
            android:layout_alignParentRight="true"
            android:text="" />

        <TextView
            android:id="@+id/lblVolumeAnsSphere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lblVolumeSphere"
            android:layout_alignLeft="@+id/lblAreaAnsSphere"
            android:layout_alignParentRight="true"
            android:text="" />

    </RelativeLayout>

</RelativeLayout>