<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/Copyright" />

    <RelativeLayout
        android:id="@+id/lblCircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/lblRadiusCircle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:text="Radius" />

        <EditText
            android:id="@+id/txtRadiusCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblRadiusCircle"
            android:layout_alignBottom="@+id/lblRadiusCircle"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/lblRadiusCircle"
            android:ems="10"
            android:hint="Radius of the Circle" >
        </EditText>

        <Button
            android:id="@+id/btnCalculateCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtRadiusCircle"
            android:layout_marginTop="50dp"
            android:onClick="calculate"
            android:text="@string/Calculate" />

        <TextView
            android:id="@+id/lblAreaCircle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCalculateCircle"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@+id/txtRadiusCircle"
            android:text="Area" />

        <TextView
            android:id="@+id/lblCircumferenceCircle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblAreaCircle"
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@+id/txtRadiusCircle"
            android:text="Circumference" />

        <Button
            android:id="@+id/btnInformationCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:text="@string/Information" />

        <TextView
            android:id="@+id/lblAreaAnsCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblAreaCircle"
            android:layout_alignBottom="@+id/lblAreaCircle"
            android:layout_alignLeft="@+id/txtRadiusCircle"
            android:layout_alignParentRight="true"
            android:text="" />

        <TextView
            android:id="@+id/lblCircumferenceAnsCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lblCircumferenceCircle"
            android:layout_alignLeft="@+id/lblAreaAnsCircle"
            android:layout_alignParentRight="true"
            android:text="" />
    </RelativeLayout>

</RelativeLayout>