<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/Copyright" />

    <RelativeLayout
        android:id="@+id/layoutBrick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp" >

        <TextView
            android:id="@+id/lblWidth"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:text="Width" />

        <TextView
            android:id="@+id/lblHeight"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lblWidth"
            android:layout_marginTop="35dp"
            android:text="Height" />

        <EditText
            android:id="@+id/txtWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblWidth"
            android:layout_alignBottom="@+id/lblWidth"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/lblWidth"
            android:ems="10"
            android:hint="Width of the Quad" >

        </EditText>

        <EditText
            android:id="@+id/txtHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblHeight"
            android:layout_alignBottom="@+id/lblHeight"
            android:layout_alignLeft="@+id/txtWidth"
            android:ems="10"
            android:hint="Height of the Quad" />


        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtHeight"
            android:layout_marginTop="22dp"
            android:text="@string/Calculate" />

        <TextView
            android:id="@+id/lblArea"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCalculate"
            android:layout_marginTop="35dp"
            android:layout_toLeftOf="@+id/txtWidth"
            android:text="Area" />

        <TextView
            android:id="@+id/lblPerimeter"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblArea"
            android:layout_marginTop="35dp"
            android:layout_toLeftOf="@+id/txtWidth"
            android:text="Perimeter" />

        <Button
            android:id="@+id/btnInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:text="@string/Information" />

        <TextView
            android:id="@+id/lblAreaAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lblArea"
            android:layout_alignLeft="@+id/txtHeight"
            android:layout_alignRight="@+id/txtHeight"
            android:text="" />

        <TextView
            android:id="@+id/lblPerimeterAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lblPerimeter"
            android:layout_alignLeft="@+id/lblAreaAns"
            android:layout_alignRight="@+id/lblAreaAns"
            android:text="" />
    </RelativeLayout>

</RelativeLayout>